--- a/boards/miniecu_v1/Makefile
+++ b/boards/miniecu_v1/Makefile
@@ -60,6 +60,7 @@ PROJECT = miniecu_v1
 # Imported source files and paths
 MINIECU ?= ../..
 CHIBIOS = $(MINIECU)/ext/chibios
+FLASH25 = $(MINIECU)/ext/flash25
 BUILDDIR = $(MINIECU)/build/miniecu_v1
 
 include $(MINIECU)/boards/miniecu_v1/board.mk
@@ -67,8 +68,9 @@ include $(CHIBIOS)/os/hal/hal.mk
 include $(CHIBIOS)/os/hal/platforms/STM32F0xx/platform.mk
 include $(CHIBIOS)/os/ports/GCC/ARMCMx/STM32F0xx/port.mk
 include $(CHIBIOS)/os/kernel/kernel.mk
-include $(MINIECU)/pb/nanopb.mk
-include $(MINIECU)/fw/fw.mk
+#include $(MINIECU)/pb/nanopb.mk
+include $(FLASH25)/flash25.mk
+#include $(MINIECU)/fw/fw.mk
 
 # Define linker script file here
 #LDSCRIPT= $(PORTLD)/STM32F051x8.ld
@@ -82,6 +84,7 @@ CSRC = $(PORTSRC) \
        $(PLATFORMSRC) \
        $(BOARDSRC) \
        $(NANOPBSRC) \
+       $(FLASH25SRC) \
        $(FWSRC)
 
 # C++ sources that can be compiled in ARM or THUMB mode depending on the global
@@ -113,7 +116,7 @@ ASMSRC = $(PORTASM)
 
 INCDIR = $(PORTINC) $(KERNINC) \
          $(HALINC) $(PLATFORMINC) $(BOARDINC) \
-	     $(NANOPBINC) $(FWINC) \
+         $(NANOPBINC) $(FLASH25INC) $(FWINC) \
          $(CHIBIOS)/os/various
 
 #
