--- a/hw/DESCRIPTION
+++ b/hw/DESCRIPTION
@@ -3,7 +3,25 @@
 Gas model engine monitoring unit.
 
 <h3>Connectors</h3>
-<h4>XP1 Engine sensors</h4>
+<h4>XP1 SWD</h4>
+Debug tool connector (1.27 mm)
+
+<h4>XP2 External board</h4>
+Connector for dauther board
+<ul>
+<li>RTCBAT — RTC backup battery
+<li>PC13 — GPIO / TAMPER
+<li>PA1 — GPIO / PWM / Input compare
+<li>PA2 — GPIO / PWM
+<li>CAN_TX/RX — to CAN 2.0b transceiver / GPIO
+<li>SCL/SDA — I<sup>2</sup>C / GPIO
+</ul>
+
+<h4>XP3 USB device</h4>
+Optional connector for downloading logs and updating firmware.
+DO NOT USE WITH IGNITION BATTERY ATTACHED.
+
+<h4>XP4 Engine sensors</h4>
 <ul>
 <li> AVCC — +3.3 for analog sensors (if needed)
 <li> THERM — input for NTC 10k grounded to AGND
@@ -13,14 +31,7 @@ Gas model engine monitoring unit.
 <li> STARTER — open drain output for starter relay (optional)
 </ul>
 
-<h4>XP2 Fuel flow sensor</h4>
-<ul>
-<li> PULSE — signal from flow sensor
-<li> VCC — +3.3V for supply hall sensor
-<li> GND — ground
-</ul>
-
-<h4>XP3 Data IO</h4>
+<h4>XP5 Data IO</h4>
 <ul>
 <li> VCC — +2.7 .. +5 V supply for isolator IC
 <li> TXD — isolated UART TX
@@ -28,10 +39,13 @@ Gas model engine monitoring unit.
 <li> GND — isolated from main ground
 </ul>
 
-<h4>XP4 Power/Kill switch</h4>
+<h4>XP6 Power/Kill switch</h4>
 <ul>
 <li> V_IGN — switch output for ignition module
 <li> GND_IGN — ground for ignition module
 <li> V_BAT — ignition battery positive terminal (+)
 <li> GND_BAT — battery negative terminal
-</ul> 
+</ul>
+
+<h4>MP3V5004DP terminals</h4>
+Connect to Venturi / Disc tube.
