fw: Add ESTOP in command module
Small changes: don't answer to broadcast commands,
add python protoc generator.

Fix #10.

--- a/pb/Makefile
+++ b/pb/Makefile
@@ -23,3 +23,6 @@ else
 	@echo Protoc $(<F)
 	@$(PROTOC) $(PROTOC_OPTS) --nanopb_out="$(PROTODIR)" $<
 endif
+
+python_msgs:
+	$(PROTOC) *.proto --python_out="$(MINIECU)/tools/miniecu"
