Update nanopb to 0.3.1.

--- a/pb/Makefile
+++ b/pb/Makefile
@@ -5,17 +5,22 @@ MINIECU ?= ..
 BUILDDIR ?= $(MINIECU)/build
 
 NANOPBDIR = $(MINIECU)/ext/nanopb
+NANOPBP2PY = $(NANOPBDIR)/generator/proto/nanopb_pb2.py
+NANOPBPPLUGIN = $(NANOPBDIR)/generator/protoc-gen-nanopb
 PROTODIR = $(BUILDDIR)/pb
 
 PROTOC = protoc
-PROTOC_OPTS = --plugin=protoc-gen-nanopb=$(NANOPBDIR)/generator/protoc-gen-nanopb
+PROTOC_OPTS = --plugin=protoc-gen-nanopb=$(NANOPBPPLUGIN)
 
 all: $(PROTODIR)/miniecu.pb.c $(PROTODIR)/flash.pb.c
 
 $(PROTODIR):
 	mkdir -p $(PROTODIR)
 
-$(PROTODIR)/%.pb.c: %.proto $(wildcard %.options) $(PROTODIR)
+$(NANOPBP2PY):
+	make -C $(NANOPBDIR)/generator/proto
+
+$(PROTODIR)/%.pb.c: %.proto $(wildcard %.options) $(PROTODIR) $(NANOPBP2PY)
 ifeq ($(USE_VERBOSE_COMPILE),yes)
 	@echo
 	$(PROTOC) $(PROTOC_OPTS) --nanopb_out="$(PROTODIR)" $<
