fw: param load at startup almost done.
Buggy stopper: param_load() freeze cpu if it called from main().
So as workaroud i decide to load params in flash log thread.

--- a/fw/parameters.yaml
+++ b/fw/parameters.yaml
@@ -184,6 +184,11 @@ parameters:
     max: 100000
     var: gp_flow_low_ml
 
+  INIT_IGN_RTC: !ptbool
+    desc: Ignore RTC wait init time for transition to NORMAL led mode
+    var: gp_rtc_init_ignore_alert_led
+    default: true # temporary
+
   DEBUG_ADC_RAW: !ptbool
     desc: Enable sending Status.adc_raw data
     var: gp_debug_enable_adc_raw
