--- a/fw/parameters.yaml
+++ b/fw/parameters.yaml
@@ -72,13 +72,12 @@ parameters:
     max: 60000
     default: 1000
 
-  BATT_VD1_VDROP: !ptfloat
-    desc: Voltage drop on VD1 diode (hw 2.0a bug compensation)
-    min: 0.0
-    max: 1.4
+  BATT_VTRIMM: !ptfloat
+    desc: Adjust battery voltage for several vlotage drops.
+    min: -3.0
+    max: 3.0
     default: 0.4
-    var: gp_batt_vd1_voltage_drop
-
+    var: gp_batt_voltage_trimm
   BATT_CELLS: !ptint32
     desc: Number of cells in battery
     min: 1
@@ -139,7 +138,7 @@ parameters:
   RPM_MIN_IDLE: !ptint32
     desc: Low RPM limit (Idle RPM - 10%..20%)
     min: 0
-    max: 3000
+    max: 20000
     default: 800
 
   FLOW_ENABLE: !ptbool
@@ -187,7 +186,7 @@ parameters:
   INIT_IGN_RTC: !ptbool
     desc: Ignore RTC wait init time for transition to NORMAL led mode
     var: gp_rtc_init_ignore_alert_led
-    default: true # temporary
+    default: true
 
   DEBUG_ADC_RAW: !ptbool
     desc: Enable sending Status.adc_raw data
